Add return to top link to toolkit pages

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -9,23 +9,26 @@ preload: hero-toolkits.svg
   class = "hero--toolkits"
 %}
 
-<div class="grid-container">
+<div class="grid-container" id="main">
   <div class="row d-flex">
     <div class="sidenav col-12 col-md-3 order-2 order-md-1">
       <div class="">
         <nav class="subnav-col px-0 mt-4 mt-md-0" id="sidenav">
           <ul>
-           {% for item in site.data.toolkits[page.sidenav].toc %}
+            {% for item in site.data.toolkits[page.sidenav].toc %}
               <li>
                 <a class="nav-link {% if item.url == page.url %}current{% endif %}" href="{{ item.url }}">{{ item.title }}</a>
               </li>
-           {% endfor %}
+            {% endfor %}
           </ul>
         </nav>
       </div>
     </div>
     <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2 {{page.toolkit_name}}">
       {{ content }}
+      <p class="link--return-top-top mt-5">
+        <a href="#main">Return to top</a>
+      </p>
     </section>
   </div>
 </div>
