Rm prev/next test

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -26,7 +26,7 @@ preload: hero-toolkits.svg
     </div>
     <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2 {{page.toolkit_name}}">
       {{ content }}
-      <div class="d-flex text-primary mt-5 justify-content-between">
+      <!-- <div class="d-flex text-primary mt-5 justify-content-between">
         <span>
           <i class="fal fa-long-arrow-left mr-1" aria-hidden="true"></i>
           Understanding your talent gaps
@@ -35,7 +35,7 @@ preload: hero-toolkits.svg
           Building a digital team
           <i class="fal fa-long-arrow-right ml-1" aria-hidden="true"></i>
         </span>
-      </div>
+      </div> -->
       <p class="link--return-top-top mt-5">
         <a href="#main">Return to top</a>
       </p>
