--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -26,17 +26,34 @@ preload: hero-toolkits.svg
     </div>
     <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2 {{page.toolkit_name}}">
       {{ content }}
-      <!-- <div class="d-flex text-primary mt-5 justify-content-between">
-        <span>
-          <i class="fal fa-long-arrow-left mr-1" aria-hidden="true"></i>
-          Understanding your talent gaps
-        </span>
-        <span>
-          Building a digital team
-          <i class="fal fa-long-arrow-right ml-1" aria-hidden="true"></i>
-        </span>
-      </div> -->
-      <p class="link--return-top-top mt-5">
+
+      {% assign items = site.data.toolkits[page.sidenav].toc %}
+      {% for item in items %}
+        {% if item.url == page.url %}
+          {% assign prev_i = forloop.index0 | minus: 1 %}
+          {% assign next_i = forloop.index0 | plus: 1 %}
+          <div class="pagination-alt text-primary mt-5">
+            <div>
+              {% unless page.url == items.first.url %}
+              <a class="pagination-alt__step pagination-alt__step--previous" href="{{ items[prev_i].url }}">
+                <span><i class="fal fa-long-arrow-left mr-1" aria-hidden="true"></i></span>
+                <span class="sr-only">Previous article:</span>
+                <span class="pagination-alt__step-text">{{ items[prev_i].title }}</span>
+              </a>
+              {% endunless %}
+            </div>
+            <div>
+              {% unless page.url == items.last.url %}
+                <a class="pagination-alt__step pagination-alt__step--next" href="{{ items[next_i].url }}">
+                  <span class="sr-only">Next article:</span>
+                  <span class="pagination-alt__step-text">{{ items[next_i].title }}</span><span class="pagination-next__icon">&nbsp;<i class="fal fa-long-arrow-right ml-1" aria-hidden="true"></i></span>
+                </a>
+              {% endunless %}
+            </div>
+          </div>
+        {% endif %}
+      {% endfor %}
+      <p class="link--return-top-top mt-6">
         <a href="#main">Return to top</a>
       </p>
     </section>
