--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -94,3 +94,59 @@
     margin-bottom: -2rem;
   }
 }
+
+.pagination-alt {
+  @include media-breakpoint-up(sm) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  a {
+    border-bottom: none;
+
+    &:hover {
+      border-bottom: none;
+    }
+  }
+}
+
+.pagination-alt__previous {
+  @include media-breakpoint-up(sm) {
+    float: left;
+    margin-right: 1rem;
+  }
+}
+
+.pagination-alt__step {
+  display: flex;
+  font-size: $font-size-small;
+}
+
+.pagination-alt__step-text {
+  max-width: 100vw;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+  @include media-breakpoint-up(sm) {
+    max-width: 35vw;
+  }
+
+  @include media-breakpoint-up(md) {
+    max-width: 25vw;
+  }
+}
+
+.pagination-alt__step--next {
+  margin-top: 1rem;
+
+  @include media-breakpoint-up(sm) {
+    float: right;
+    margin-left: 1rem;
+    margin-top: 0;
+  }
+}
+
+.pagination-next__icon {
+  white-space: nowrap;
+}
