Add sticky footer

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -91,3 +91,14 @@
     line-height: 1.5;
   }
 }
+
+// Sticky footer
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
