--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -350,6 +350,7 @@
   max-width: $size-desktop;
   margin-inline: auto;
   padding-inline: 1rem;
+  width: 100%;
 
   @include media-breakpoint-up(sm) {
     padding-inline: 2rem;
