--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -42,7 +42,14 @@ include.context %} {% capture filter_title_markup %}
       {% if filtered_items.size > 0 %} {% for filtered_item in filtered_items %}
       <article class="filter-item">
         <h2 class="filter-item-title header-display-3">
-          <a class="filter-item-link" href="{{filtered_item.permalink}}"
+          <a class="filter-item-link"
+            href="
+              {% if site.talks %}
+                /thoughts/talks/#{{filtered_item.title | slugify }}
+              {% else %}
+                {{filtered_item.permalink}}
+              {% endif %}
+            "
             >{{filtered_item.title}}</a
           >
         </h2>
