--- a/_layouts/employee_filter.html
+++ b/_layouts/employee_filter.html
@@ -11,7 +11,7 @@ layout: default
   {% assign items = site.projects | where: 'tags', tag_filter | sort: 'order' %}
   {% assign header = 'Work Search Results' %}
 {% elsif filter_type == 'talk' %}
-  {% assign items = site.talks | where: 'tags', tag_filter %}
+  {% assign items = site.talks | where: 'tags', tag_filter | sort: 'order' %}
   {% assign header = 'Talk Search Results' %}
 {% else %}
   {% assign items = site.blog_posts | where: 'tags', tag_filter | sort: 'date_published' | reverse %}
