--- a/_sass/pages/_training.scss
+++ b/_sass/pages/_training.scss
@@ -1,3 +1,9 @@
+.page-training {
+  .card-text {
+    font-size: $font-size-medium;
+  }
+}
+
 .training-item {
   display: flex;
   flex-direction: column;
