--- a/_sass/bootstrap/_card.scss
+++ b/_sass/bootstrap/_card.scss
@@ -27,8 +27,12 @@
   margin-bottom: 0;
 }
 
-.card-text:last-child {
-  margin-bottom: 0;
+.card-text {
+  font-size: $font-size-small;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .card-link {
