Remove inline padding from sidenav

--- a/_sass/bootstrap/_nav.scss
+++ b/_sass/bootstrap/_nav.scss
@@ -12,7 +12,7 @@
 
 .nav-link {
   display: block;
-  padding: $nav-link-padding;
+  padding-block: $nav-link-padding;
 
   @include hover-focus {
     text-decoration: none;
