--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -695,7 +695,7 @@ $navbar-light-toggler-border: rgba($black, 0.1) !default;
 
 $nav-item-margin: 0.2rem !default;
 $nav-item-inline-spacer: 1rem !default;
-$nav-link-padding: 0.75em 0.5em !default;
+$nav-link-padding: 0.75em !default;
 $nav-link-hover-bg: $gray-lighter !default;
 $nav-disabled-link-color: $gray-light !default;
 
