--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -1,3 +1,5 @@
+$home-cta-spacing: 6rem;
+
 .landing-page {
   @extend %text-center;
 }
@@ -83,7 +85,7 @@
   margin-top: 3rem;
 
   @include media-breakpoint-up(md) {
-    margin-top: 8rem;
+    margin-top: $home-cta-spacing;
   }
 }
 
@@ -96,13 +98,13 @@
   margin-bottom: 3rem;
 
   @include media-breakpoint-up(md) {
-    margin-bottom: 8rem;
+    margin-bottom: $home-cta-spacing;
   }
 }
 
 .landing__callout--footer {
   @include media-breakpoint-up(md) {
-    margin-block: 8rem;
+    margin-block: $home-cta-spacing;
   }
 }
 
@@ -144,11 +146,11 @@
 
 .landing-content-cta-wrapper {
   @extend %d-lg-inline-block;
+  margin-inline: 0.75rem;
 
   &:first-child {
     @extend %mb-3;
     @extend %mb-lg-0;
-    margin-inline: 0.75rem;
   }
 
   a {
