--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -37,23 +37,27 @@ preload: hero-toolkits.svg
               {% unless page.url == items.first.url %}
               <a class="pagination-alt__step pagination-alt__step--previous" href="{{ items[prev_i].url }}">
                 <span><i class="fal fa-long-arrow-left mr-1" aria-hidden="true"></i></span>
-                <span class="sr-only">Previous article:</span>
-                <span class="pagination-alt__step-text">{{ items[prev_i].title }}</span>
+                <span>
+                  Back<span class="pagination__colon">:</span>
+                </span>
+                <span class="pagination-alt__step-text">&nbsp;{{ items[prev_i].title }}</span>
               </a>
               {% endunless %}
             </div>
             <div>
               {% unless page.url == items.last.url %}
                 <a class="pagination-alt__step pagination-alt__step--next" href="{{ items[next_i].url }}">
-                  <span class="sr-only">Next article:</span>
-                  <span class="pagination-alt__step-text">{{ items[next_i].title }}</span><span class="pagination-next__icon">&nbsp;<i class="fal fa-long-arrow-right ml-1" aria-hidden="true"></i></span>
+                  <span>
+                    Next<span class="pagination__colon">:</span>
+                  </span>
+                  <span class="pagination-alt__step-text">&nbsp;{{ items[next_i].title }}</span><span class="pagination-next__icon">&nbsp;<i class="fal fa-long-arrow-right ml-1" aria-hidden="true"></i></span>
                 </a>
               {% endunless %}
             </div>
           </div>
         {% endif %}
       {% endfor %}
-      <p class="link--return-top-top mt-6">
+      <p class="d-none link--return-top-top mt-6">
         <a href="#main">Return to top</a>
       </p>
     </section>
