--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -213,6 +213,10 @@ h6 {
   max-width: $prose-max-width !important;
 }
 
+.font-xs {
+  font-size: $font-size-x-small !important;
+}
+
 .font-md {
   font-size: $font-size-medium !important;
 }
