hide x overflow on body

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -98,6 +98,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  overflow-x: hidden; // prevent page overflow
 }
 
 main {
