Add mobile header nav and update accordion

--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -14,7 +14,7 @@
       class="collapsed"
     >
       <div>
-        <h3 class="mb-0">
+        <h3 class="accordion-heading mb-0">
           <div>{{include.accordion_header}}</div>
         </h3>
       </div>
