--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -129,17 +129,15 @@
     }
   }
 
-  h3 {
+  .filter__heading {
     font-family: $font-family-sans-serif;
+    font-size: $font-size-x-large;
+    font-weight: bold;
+    margin-bottom: 0.5em !important;
   }
 
   ul {
     font-size: $font-size-small;
     line-height: 2;
   }
-}
-
-// Sticky hover fix
-.can-touch .accordion-filter .accordion-header a:hover {
-  background-color: $gray-lightest;
 }
