--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -35,7 +35,7 @@ preload: hero-toolkits.svg
           <div class="pagination-alt text-primary mt-5">
             <div>
               {% unless page.url == items.first.url %}
-              <a class="pagination-alt__step pagination-alt__step--previous" href="{{ items[prev_i].url }}" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{ items[prev_i].title }}">
+              <a class="pagination-alt__step pagination-alt__step--previous" href="{{ items[prev_i].url }}">
                 <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
                 <span>
                   Previous section
@@ -45,7 +45,7 @@ preload: hero-toolkits.svg
             </div>
             <div>
               {% unless page.url == items.last.url %}
-                <a class="pagination-alt__step pagination-alt__step--next" href="{{ items[next_i].url }}"  data-toggle="tooltip" data-placement="top" data-animation="false" title="{{ items[next_i].title }}">
+                <a class="pagination-alt__step pagination-alt__step--next" href="{{ items[next_i].url }}">
                   <span>
                     Next section
                   </span>
