--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -61,8 +61,12 @@
   .card-footer {
     padding: 0;
   }
+}
 
-  .margin-heading:not(:first-child) {
-    margin-top: 2.5em;
+.sd__heading {
+  margin-bottom: 0.5em;
+
+  &:not(:first-child) {
+    padding-top: 2.5em;
   }
 }
