--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -4,6 +4,6 @@ layout: default
 
 {% include page_header.html %}
 
-<div class="grid-container maxw-md text prose">{{content}}</div>
+<div class="grid-container maxw-md text prose layout-policy">{{content}}</div>
 
 {% include join_us_cta.html %}
