--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -55,6 +55,7 @@ $sk-yellow: darken($ochre-100, 0%);
 $sk-grey: $gray-100;
 
 // Font sizes
+$font-size-xxxxxx-large: 4rem; // 64px
 $font-size-xxxxx-large: 3rem; // 48px
 $font-size-xxxx-large: 2.5rem; // 40px
 $font-size-xxx-large: 2rem; // 32px
