Remove top line from filter btn

--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -56,7 +56,7 @@
       id="accordionHeading-{{include.accordion_index}}"
     >
       <a
-        class="collapsed"
+        class="filter__button collapsed"
         data-toggle="collapse"
         href="#accordionCollapse-{{include.accordion_index}}"
         aria-expanded="false"
