Reduce size of SD h1

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -324,7 +324,7 @@ $outline-light: 2px solid #f2f2f2;
     line-height: 1.15;
 
     @include media-breakpoint-up(md) {
-      font-size: $font-size-xxxxxx-large;
+      font-size: $font-size-xxxxx-large;
     }
   }
 }
