--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -212,6 +212,8 @@ $outline-light: 2px solid #f2f2f2;
 }
 
 .tuition-card-meta {
+  font-size: $font-size-small;
+
   p {
     margin-top: 4px;
   }
@@ -225,7 +227,7 @@ $outline-light: 2px solid #f2f2f2;
   }
 
   h4 {
-    font-size: $font-size-medium;
+    font-size: $font-size-small;
   }
 }
 
