Adjust filter btn line

--- a/_sass/pages/_filter.scss
+++ b/_sass/pages/_filter.scss
@@ -35,7 +35,9 @@
 }
 
 .filter__button {
+  background-position-x: right !important;
   border-top: none !important;
+  padding-inline: 0 !important;
 }
 
 .filter-image {
