Reduce size of DITAP card text

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -208,6 +208,7 @@ $outline-light: 2px solid #f2f2f2;
 
 .tuition-card-note {
   display: block;
+  font-size: $font-size-small;
   margin-top: 1em;
 }
 
