--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,7 +2,7 @@
   <div class="page-subfooter-content">
     <div class="page-subfooter-header-row">
       <div class="page-subfooter-header-col">
-        <h2 class="header-display-2">{{include.header}}</h2>
+        <h2 class="page-subfooter-heading">{{include.header}}</h2>
       </div>
     </div>
 
