Increase spacing above filter tags

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -123,6 +123,7 @@
   a.tag-badge {
     font-family: $font-family-mono;
     margin-right: 1em;
+    margin-top: 0.5rem;
     padding-block: 7px;
     padding-inline: 0.5rem;
 
