--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -230,6 +230,7 @@ $grid-breakpoints: (
   md: 768px,
   lg: 992px,
   xl: 1200px,
+  2xl: 1440px,
 ) !default;
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 @include _assert-starts-at-zero($grid-breakpoints);
@@ -258,6 +259,7 @@ $grid-gutter-widths: (
   md: $grid-gutter-width-base,
   lg: $grid-gutter-width-base,
   xl: $grid-gutter-width-base,
+  2xl: $grid-gutter-width-base,
 ) !default;
 
 // Fonts
